<resources>
    <string name="app_name">央视影音大屏版</string>
    <string name="module_area_no_data">当前页面暂无数据</string>


    <string name="listpage_rearch">搜索</string>
    <string name="listpage_screen">筛选</string>
    <string name="weather_fail">天气获取失败</string>
    <string name="unknown">未知</string>
    <string name="my_app">我的应用</string>　
    <!-- 详情页-->
    <string name="search_history">搜索历史</string>
    <string name="search_poster_title">搜索结果</string>
    <string name="search_Load_reminding">正在加载请稍后</string>
    <string name="search_drama_title">影音</string>
    <string name="search_single_title">单片</string>
    <string name="search_column_title">电视栏目</string>
    <string name="search_person_title">人物</string>
    <string name="search_result_empty">暂无搜索结果</string>
    <string name="search_hot_recommend_empty">暂无热搜结果</string>
    <string name="search_enter_failure">暂无搜索结果</string>
    <string name="search_hot">大家爱搜</string>
    <string name="search_fail_agin">网络不好，请重试</string>
    <string name="net_error">没有网络连接，请设置网络</string>
    <string name="search_keybroad_show">按名称的拼音首字母搜索；\n例如搜索名称“爱情”请输入AQ</string>
    <string name="search_loading">正在搜索中......</string>

    <string name="search_keybroad_input">请输入拼音的首字母</string>
    <string name="my_app_oper_tip">按菜单键进入管理模式</string>
    <string name="my_app_list_error">获取应用列表失败</string>
    <string name="my_app_no_data">未查询到当前设备的应用数据</string>
    <string name="my_app_enter_edit_mode">已进入应用管理模式</string>
    <string name="my_app_sys_app_can_not_uninstall">无法卸载系统应用</string>

    <string name="tv_series">电视剧</string>
    <string name="current_play_model_is_single">当前播放为单个节目</string>
    <string name="current_play_episode_is_last">当前播放为最后一集</string>
    <string name="current_play_episode_is_first">当前播放为第一集</string>
    <string name="can_not_find_appoint_episode">找不到指定剧集</string>
    <string name="current_play_episode_is_appoint">正在播放指定剧集</string>
    <string name="program_info_no_data">暂无节目内容</string>
    <string name="play_complete">播放完毕</string>

    <!-- 详情页-->
    <string name="detail_copyright_tx">本视频版权来自&#160;NewTV极光</string>
    <string name="detail_copyright_newtv">本视频版权来自&#160;NewTV自建媒资</string>
    <string name="detail_play">播放</string>
    <string name="detail_big_screen">全屏</string>
    <string name="detail_continue">继续</string>
    <string name="detail_look">试看</string>
    <string name="detail_praise">点赞</string>
    <string name="detail_series">选集</string>
    <string name="detail_collect">收藏</string>
    <string name="detail_vip">会员</string>
    <string name="detail_buy">购买</string>
    <string name="detail_content">简介：</string>
    <string name="detail_oldlook">上次观看至：</string>
    <string name="detail_film">电影</string>

    <!--列表页-->
    <string name="list_no_content">暂无相关内容,请更换选择条件</string>
    <string name="list_no_pageuuid">列表页获取异常</string>
    <string name="list_classtypes">类型</string>
    <string name="list_year">年代</string>
    <string name="list_area">地区</string>

    <string name="not_support_direct_type">暂不支持的跳转类型</string>
    <string name="downloading">正在下载</string>
    <string name="open_apk_fail">没有找到相关的应用</string>
    <string name="actionuri_is_null">actionUri is null</string>
    <string name="no_link">暂无链接</string>
    <string name="auth_error">认证失败, 请稍后再试</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="tip_text_title">系统提示</string>
    <string name="tip_text_auth_error">设备认证失败</string>
    <string name="tip_text_active_error">设备激活失败</string>
    <string name="tip_text_boot_guide_failed">获取服务器地址失败, 是否跳转至设置页检查当前网络状况?</string>

    <string name="tag_is_center">tagIsCenter</string>
    <string name="loading">页面数据加载中…</string>
    <string name="delete_tip">按返回键取消，选择按键进行操作</string>
    <string name="clear_all">清空全部</string>
    <string name="delete_single">删除该条</string>


    <string name="guess_like_watch">猜您喜欢看：</string>
    <string name="ask_exit_app">您确定退出央视影音大屏版吗？</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_update_hint">系统更新</string>
    <string name="user_system_version">当前版本:</string>

    <!-- 错误信息-->
    <string name="no_video_url">视频没有播放地址</string>
    <string name="logo">logo</string>
    <string name="check_error">播放鉴权失败：</string>

    <string name="auth_ing">正在认证</string>
    <string name="collect_success">收藏成功,请到我的收藏中查看</string>
    <string name="subscribe_success">订阅成功,请到我的订阅中查看</string>
    <string name="attention_success">关注成功,请到我的关注中查看</string>
    <string name="new_version_tip">亲爱的用户: 能享受新版本的服务了,更新如下:</string>

    <!--用户中心二期-->
    <string name="use_mobile_login">用手机号码验证登录</string>
    <string name="exit_login">退出登录</string>
    <string name="user_id">用户ID</string>
    <string name="user_age">年龄</string>
    <string name="user_sex">性别</string>
    <string name="user_mobile">手机号</string>
    <string name="newtv_wechat">中国互联网电视 微信公众号</string>
    <string name="newtv_weibo">中国互联网电视 微博号</string>
    <string name="qr_public">扫码关注公众号</string>
    <string name="qr_webo">扫码关注微博号</string>
    <string name="service_number">客服电话 4000463366</string>
    <string name="service_qq">客服QQ 800085092</string>
    <string name="user_help_back">返回</string>
    <string name="user_prompt_login">请登录</string>
    <string name="user_already_login">查看资料</string>
    <string name="user_prompt_member">会员中心</string>
    <string name="user_already_member">会员续费</string>
    <string name="user_poster_program_update_title_left_being">更新至</string>
    <string name="user_poster_program_update_title_left_end">全</string>
    <string name="user_tag_poster_program_update_title_right">集</string>
    <string name="member_qr_top_title">请用手机扫码到M站购买</string>
    <string name="member_qr_bottom_title">点击【确认键】 可放大二维码</string>
    <string name="member_qr_full_screen_top_title">请使用手机扫描二维码登录</string>
    <string name="member_qr_full_screen_bottom_title">点击【返回键】 可缩小二维码</string>
    <string name="member_center_btn_login">登录</string>
    <string name="member_center_btn_open">开通会员</string>
    <string name="member_center_btn_exchange">会员兑换</string>
    <string name="member_center_btn_order">我的订单</string>
    <string name="member_center_btn_drama_library">会员片库</string>
    <string name="member_agreement_title">欢迎查看会员协议</string>
    <string name="user_agreement_title">欢迎查看用户协议</string>

    <string name="usercenter_history_operation_text">按菜单键进行管理</string>
    <string name="usercenter_subscription_operation_text">取消订阅请进入详情页</string>
    <string name="usercenter_collection_operation_text">取消收藏请进入详情页</string>
    <string name="usercenter_attention_operation_text">取消关注请进入详情页</string>

    <string name="usercenter_login_scan_phone">请使用手机扫描二维码登录</string>
    <string name="usercenter_login_scan_quest">点击【确认键】可放大二维码</string>
    <string name="phone_login_err">获取二维码失败，请重试</string>
    <string name="usercenter_login_scan_quest_tv">请在手机操作，勿关闭电视页面</string>
    <string name="send_phone_err">发送验证码失败!</string>
    <string name="phone_login_status1">已发送</string>
    <string name="phone_login_status2">输入错误</string>
    <string name="phone_login_status3">验证码验证失败!</string>
    <string name="phone_login_status4">重新发送</string>
    <string name="phone_login_info">用户资料</string>
    <string name="phone_login_tip_1">按返回键扫描二维码登录</string>
    <string name="phone_login_tip_2">请输入手机号登录</string>
    <string name="phone_login_tip_3">请输入11位数手机号码</string>
    <string name="phone_login_tip_code">已发送到</string>
    <string name="phone_login_tip_code1">，按返回键重新输入手机号</string>
    <string name="phone_login_tip_5">请输入验证码</string>
    <string name="phone_login_tip_6">s内输入有效</string>
    <string name="phone_login_code_err">验证码不能为空</string>
    <string name="phone_login_user_agreement">同意《用户协议》</string>
    <string name="phone_login_user_success">登录成功！</string>
    <string name="phone_login_user_success1">秒跳转</string>

    //会员中心
    <string name="usercenter_member">亲爱的用户：</string>
    <string name="usercenter_member_agreement">您购买则表示您同意并接受《会员支付协议》</string>
    <string name="usercenter_member_down">按下键购买点播</string>
    <string name="usercenter_pay_channel_wx">微信支付</string>
    <string name="usercenter_pay_channel_ap">支付宝支付</string>
    <string name="usercenter_pay">请扫码购买</string>
    <string name="usercenter_pay_product">购买商品：</string>
    <string name="usercenter_pay_price">售价：</string>
    <string name="usercenter_pay_price_unit">元</string>
    <string name="usercenter_pay_time">观看有效期：</string>
    <string name="usercenter_pay_time_unit">天</string>
    <string name="usercenter_pay_copyright">《支付协议》</string>
    <string name="usercenter_use_copyright">版权使用和解释权归未来电视有限公司所有</string>
    <string name="usercenter_pay_success">恭喜您完成购买！</string>
    <string name="usercenter_pay_success_time">观看有效期到</string>
    <string name="usercenter_pay_success_ok">确定（</string>
    <string name="usercenter_pay_success_ok1">s）</string>
    <string name="usercenter_pay_success_ok2">确定</string>

    <!-- 会员到期提醒 -->
    <string name="vip_tip">已购买，将于%s到期</string>
    <string name="vip_tip1">已购买，将于</string>
    <string name="vip_tip2">到期</string>

    <!--兑换码-->
    <string name="code_exchange_title">兑换码</string>
    <string name="code_exchange_input">请输入兑换码</string>
    <string name="code_exchange_qrcode">扫码兑换</string>
    <string name="code_exchange_success">激活成功。</string>
    <string name="code_exchange_fail">兑换码错误，请重新输入。</string>
    <string name="code_exchange_fail_0">您输入的兑换码无效，请重新输入。</string>
    <string name="code_exchange_fail_1">该点卡已被激活，不可重复激活。</string>
    <string name="code_exchange_fail_2">该点卡已过期。</string>
    <string name="code_exchange_fail_3">您输入的兑换码无效，请联系硬件厂商。</string>
    <string name="code_exchange_fail_4">该产品包已下线，请联系未来电视客服。</string>
    <string name="code_exchange_fail_5">您已输入5次兑换码，请2个小时后再试。</string>
    <string name="code_exchange_fail_6">兑换码未在有效期内使用。</string>
    <string name="code_exchange_tip1">说明：请您输入16位字母加数字的兑换码。</string>
    <string name="code_exchange_tip2">兑换记录请到订单管理中查看。</string>
    <string name="user_offline_becauce_login_on_mutiple_teminal">您登录的终端已经超过数量限制，即将下线</string>
    <string name="more">更多</string>

    //收藏
    <string name="collect_lb">轮播</string>
    <string name="collect_ps">节目集</string>
    <string name="collect">我的收藏</string>
</resources>
