<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_bg">


    <ImageView
        android:id="@+id/paychannel_image_head"
        android:layout_width="@dimen/width_80px"
        android:layout_height="@dimen/height_80px"
        android:layout_marginLeft="@dimen/width_128px"
        android:layout_marginStart="@dimen/width_128px"
        android:layout_marginTop="@dimen/height_68px"
        android:contentDescription="@string/logo"
        android:src="@drawable/paychannel_head" />

    <TextView
        android:id="@+id/paychannel_tv_name"
        android:layout_width="@dimen/width_420px"
        android:layout_height="@dimen/height_36px"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/width_38px"
        android:layout_marginStart="@dimen/width_38px"
        android:layout_marginTop="@dimen/height_90px"
        android:layout_toRightOf="@+id/paychannel_image_head"
        android:gravity="center|left"
        android:includeFontPadding="false"
        android:text="@string/usercenter_member"
        android:textColor="#E6D38E"
        android:textSize="@dimen/height_36px" />

    <ImageView
        android:id="@+id/paychannel_image_rights"
        android:layout_width="@dimen/width_1680px"
        android:layout_height="@dimen/height_290px"
        android:layout_below="@+id/paychannel_image_head"
        android:layout_marginLeft="@dimen/width_120px"
        android:layout_marginStart="@dimen/width_120px"
        android:layout_marginTop="@dimen/height_38px"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/default_member_center_1680_200_v2" />

    <RelativeLayout
        android:id="@+id/paychannel_rel_vip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_96px"
        android:layout_below="@+id/paychannel_image_rights"
        android:layout_marginTop="@dimen/height_72px">

        <ImageView
            android:id="@+id/paychannel_image_cor"
            android:layout_width="@dimen/width_17px"
            android:layout_height="@dimen/height_17px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width_120px"
            android:layout_marginStart="@dimen/width_120px"
            android:contentDescription="@string/logo"
            android:src="@drawable/member_center_content_title_icon_v2" />

        <TextView
            android:layout_width="@dimen/width_420px"
            android:layout_height="@dimen/height_96px"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/width_10px"
            android:layout_marginStart="@dimen/width_10px"
            android:layout_toRightOf="@+id/paychannel_image_cor"
            android:gravity="center|left"
            android:includeFontPadding="false"
            android:text="@string/member_center_btn_open"
            android:textColor="#E6D38E"
            android:textSize="@dimen/height_32px" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/paychannel_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paychannel_rel_vip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/height_52px" />

    <TextView
        android:id="@+id/paychannel_tv_agreement"
        android:layout_width="@dimen/width_600px"
        android:layout_height="@dimen/height_26px"
        android:layout_marginLeft="@dimen/width_120px"
        android:layout_marginStart="@dimen/width_120px"
        android:layout_marginTop="@dimen/height_990px"
        android:focusable="true"
        android:gravity="center|start"
        android:includeFontPadding="false"
        android:text="@string/usercenter_member_agreement"
        android:textColor="@color/paychannel_color_change"
        android:textSize="@dimen/height_24px" />

    <RelativeLayout
        android:id="@+id/paychannel_rel_down"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_25px"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/height_990px"
        android:layout_toRightOf="@id/paychannel_tv_agreement">

        <TextView
            android:id="@+id/paychannel_tv_down"
            android:layout_width="@dimen/width_170px"
            android:layout_height="@dimen/height_26px"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/width_120px"
            android:layout_marginRight="@dimen/width_120px"
            android:focusable="false"
            android:gravity="center|start"
            android:includeFontPadding="false"
            android:text="@string/usercenter_member_down"
            android:textColor="@color/paychannel_color_change"
            android:textSize="@dimen/height_24px" />

        <ImageView
            android:id="@+id/paychannel_image_down"
            android:layout_width="@dimen/width_25px"
            android:layout_height="@dimen/height_25px"
            android:layout_marginEnd="@dimen/width_8px"
            android:layout_marginRight="@dimen/width_8px"
            android:layout_toLeftOf="@+id/paychannel_tv_down"
            android:layout_toStartOf="@+id/paychannel_tv_down"
            android:contentDescription="@string/logo"
            android:src="@drawable/paychannel_member_down" />
    </RelativeLayout>
</RelativeLayout>